test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-shared-from-oknil-borrowed.good
init-field-arg-nonnil-shared-from-oknil-borrowed.chpl:9: In initializer:
init-field-arg-nonnil-shared-from-oknil-borrowed.chpl:10: error: cannot create a shared variable from a borrowed class instance
init-field-arg-nonnil-shared-from-oknil-borrowed.chpl:14: Initializer instantiated as: init(rhs: borrowed MyClass?)
